wasp.css
[data-theme="wasp"] {
	--text-scaling: 1.067;
	--base-font-color: var(--color-surface-950);
	--base-font-color-dark: var(--color-surface-50);
	--base-font-family:
		ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
	--base-font-size: inherit;
	--base-line-height: inherit;
	--base-font-weight: normal;
	--base-font-style: normal;
	--base-letter-spacing: 0em;
	--heading-font-color: inherit;
	--heading-font-color-dark: inherit;
	--heading-font-family: inherit;
	--heading-font-weight: bold;
	--heading-font-style: normal;
	--heading-letter-spacing: 0.025em;
	--anchor-font-color: var(--color-tertiary-600);
	--anchor-font-color-dark: var(--color-primary-400);
	--anchor-font-family: inherit;
	--anchor-font-size: inherit;
	--anchor-line-height: inherit;
	--anchor-font-weight: inherit;
	--anchor-font-style: inherit;
	--anchor-letter-spacing: inherit;
	--anchor-text-decoration: none;
	--anchor-text-decoration-hover: underline;
	--anchor-text-decoration-active: none;
	--anchor-text-decoration-focus: none;
	--spacing: 0.25rem;
	--radius-base: 0.25rem;
	--radius-container: 0.25rem;
	--default-border-width: 1px;
	--default-divide-width: 1px;
	--default-ring-width: 1px;
	--body-background-color: var(--color-surface-50);
	--body-background-color-dark: var(--color-surface-950);
	--color-primary-50: oklch(95.84% 0.18 107.3deg);
	--color-primary-100: oklch(93.7% 0.18 103.88deg);
	--color-primary-200: oklch(91.59% 0.18 100.34deg);
	--color-primary-300: oklch(89.73% 0.18 96.97deg);
	--color-primary-400: oklch(87.71% 0.18 92.9deg);
	--color-primary-500: oklch(85.75% 0.18 88.48deg);
	--color-primary-600: oklch(81.03% 0.17 85.47deg);
	--color-primary-700: oklch(76.25% 0.16 82.01deg);
	--color-primary-800: oklch(71.51% 0.15 79.08deg);
	--color-primary-900: oklch(66.63% 0.14 74.57deg);
	--color-primary-950: oklch(61.71% 0.13 69.43deg);
	--color-primary-contrast-dark: var(--color-surface-950);
	--color-primary-contrast-light: var(--color-surface-50);
	--color-primary-contrast-50: var(--color-primary-contrast-dark);
	--color-primary-contrast-100: var(--color-primary-contrast-dark);
	--color-primary-contrast-200: var(--color-primary-contrast-dark);
	--color-primary-contrast-300: var(--color-primary-contrast-dark);
	--color-primary-contrast-400: var(--color-primary-contrast-dark);
	--color-primary-contrast-500: var(--color-primary-contrast-dark);
	--color-primary-contrast-600: var(--color-primary-contrast-dark);
	--color-primary-contrast-700: var(--color-primary-contrast-light);
	--color-primary-contrast-800: var(--color-primary-contrast-light);
	--color-primary-contrast-900: var(--color-primary-contrast-light);
	--color-primary-contrast-950: var(--color-primary-contrast-light);
	--color-secondary-50: oklch(97.15% 0.02 74.66deg);
	--color-secondary-100: oklch(90.72% 0.06 58.35deg);
	--color-secondary-200: oklch(84.61% 0.1 54.12deg);
	--color-secondary-300: oklch(78.82% 0.13 52.07deg);
	--color-secondary-400: oklch(73.77% 0.17 48.69deg);
	--color-secondary-500: oklch(69.57% 0.2 43.58deg);
	--color-secondary-600: oklch(61.02% 0.17 44.46deg);
	--color-secondary-700: oklch(52.33% 0.14 45.58deg);
	--color-secondary-800: oklch(42.96% 0.11 46.91deg);
	--color-secondary-900: oklch(33.41% 0.08 50.66deg);
	--color-secondary-950: oklch(23.05% 0.05 63.96deg);
	--color-secondary-contrast-dark: var(--color-secondary-950);
	--color-secondary-contrast-light: var(--color-secondary-50);
	--color-secondary-contrast-50: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-100: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-200: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-300: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-400: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-500: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-600: var(--color-secondary-contrast-dark);
	--color-secondary-contrast-700: var(--color-secondary-contrast-light);
	--color-secondary-contrast-800: var(--color-secondary-contrast-light);
	--color-secondary-contrast-900: var(--color-secondary-contrast-light);
	--color-secondary-contrast-950: var(--color-secondary-contrast-light);
	--color-tertiary-50: oklch(94.28% 0.09 94.35deg);
	--color-tertiary-100: oklch(90.78% 0.11 88.76deg);
	--color-tertiary-200: oklch(87.44% 0.13 84.25deg);
	--color-tertiary-300: oklch(84.46% 0.15 80.59deg);
	--color-tertiary-400: oklch(81.5% 0.16 75.44deg);
	--color-tertiary-500: oklch(78.74% 0.17 69.11deg);
	--color-tertiary-600: oklch(69.01% 0.15 70.02deg);
	--color-tertiary-700: oklch(59.12% 0.13 72.09deg);
	--color-tertiary-800: oklch(48.73% 0.1 73.75deg);
	--color-tertiary-900: oklch(37.84% 0.08 79.06deg);
	--color-tertiary-950: oklch(25.9% 0.05 89.06deg);
	--color-tertiary-contrast-dark: var(--color-tertiary-950);
	--color-tertiary-contrast-light: var(--color-tertiary-50);
	--color-tertiary-contrast-50: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-100: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-200: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-300: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-400: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-500: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-600: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-700: var(--color-tertiary-contrast-dark);
	--color-tertiary-contrast-800: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-900: var(--color-tertiary-contrast-light);
	--color-tertiary-contrast-950: var(--color-tertiary-contrast-light);
	--color-success-50: oklch(96.44% 0.09 126.09deg);
	--color-success-100: oklch(94.8% 0.13 127.33deg);
	--color-success-200: oklch(93.36% 0.17 128.47deg);
	--color-success-300: oklch(92.16% 0.21 129.41deg);
	--color-success-400: oklch(91.11% 0.23 130.89deg);
	--color-success-500: oklch(90.24% 0.25 132.61deg);
	--color-success-600: oklch(81.2% 0.23 132.85deg);
	--color-success-700: oklch(71.7% 0.2 132.86deg);
	--color-success-800: oklch(62.08% 0.17 133.22deg);
	--color-success-900: oklch(51.86% 0.15 133.3deg);
	--color-success-950: oklch(41.32% 0.12 133.84deg);
	--color-success-contrast-dark: var(--color-success-950);
	--color-success-contrast-light: var(--color-success-50);
	--color-success-contrast-50: var(--color-success-contrast-dark);
	--color-success-contrast-100: var(--color-success-contrast-dark);
	--color-success-contrast-200: var(--color-success-contrast-dark);
	--color-success-contrast-300: var(--color-success-contrast-dark);
	--color-success-contrast-400: var(--color-success-contrast-dark);
	--color-success-contrast-500: var(--color-success-contrast-dark);
	--color-success-contrast-600: var(--color-success-contrast-dark);
	--color-success-contrast-700: var(--color-success-contrast-dark);
	--color-success-contrast-800: var(--color-success-contrast-light);
	--color-success-contrast-900: var(--color-success-contrast-light);
	--color-success-contrast-950: var(--color-success-contrast-light);
	--color-warning-50: oklch(94.19% 0.08 174.28deg);
	--color-warning-100: oklch(93.24% 0.09 180.85deg);
	--color-warning-200: oklch(92.47% 0.11 185.36deg);
	--color-warning-300: oklch(91.79% 0.12 188.15deg);
	--color-warning-400: oklch(91.31% 0.13 190.92deg);
	--color-warning-500: oklch(90.94% 0.14 193.28deg);
	--color-warning-600: oklch(81.17% 0.12 195.63deg);
	--color-warning-700: oklch(71.07% 0.11 198.1deg);
	--color-warning-800: oklch(60.64% 0.09 202.66deg);
	--color-warning-900: oklch(49.7% 0.07 208.64deg);
	--color-warning-950: oklch(38.19% 0.06 220.55deg);
	--color-warning-contrast-dark: var(--color-warning-950);
	--color-warning-contrast-light: var(--color-warning-50);
	--color-warning-contrast-50: var(--color-warning-contrast-dark);
	--color-warning-contrast-100: var(--color-warning-contrast-dark);
	--color-warning-contrast-200: var(--color-warning-contrast-dark);
	--color-warning-contrast-300: var(--color-warning-contrast-dark);
	--color-warning-contrast-400: var(--color-warning-contrast-dark);
	--color-warning-contrast-500: var(--color-warning-contrast-dark);
	--color-warning-contrast-600: var(--color-warning-contrast-dark);
	--color-warning-contrast-700: var(--color-warning-contrast-dark);
	--color-warning-contrast-800: var(--color-warning-contrast-light);
	--color-warning-contrast-900: var(--color-warning-contrast-light);
	--color-warning-contrast-950: var(--color-warning-contrast-light);
	--color-error-50: oklch(90.92% 0.05 14.86deg);
	--color-error-100: oklch(84.1% 0.09 17.34deg);
	--color-error-200: oklch(77.79% 0.13 19.33deg);
	--color-error-300: oklch(72.23% 0.17 21.96deg);
	--color-error-400: oklch(67.77% 0.21 24.44deg);
	--color-error-500: oklch(64.68% 0.24 26.99deg);
	--color-error-600: oklch(59.02% 0.22 26.99deg);
	--color-error-700: oklch(53.21% 0.2 27.23deg);
	--color-error-800: oklch(47.24% 0.18 27.27deg);
	--color-error-900: oklch(41.08% 0.15 27.63deg);
	--color-error-950: oklch(34.68% 0.13 27.77deg);
	--color-error-contrast-dark: var(--color-error-950);
	--color-error-contrast-light: var(--color-error-50);
	--color-error-contrast-50: var(--color-error-contrast-dark);
	--color-error-contrast-100: var(--color-error-contrast-dark);
	--color-error-contrast-200: var(--color-error-contrast-dark);
	--color-error-contrast-300: var(--color-error-contrast-dark);
	--color-error-contrast-400: var(--color-error-contrast-dark);
	--color-error-contrast-500: var(--color-error-contrast-dark);
	--color-error-contrast-600: var(--color-error-contrast-light);
	--color-error-contrast-700: var(--color-error-contrast-light);
	--color-error-contrast-800: var(--color-error-contrast-light);
	--color-error-contrast-900: var(--color-error-contrast-light);
	--color-error-contrast-950: var(--color-error-contrast-light);
	--color-surface-50: oklch(98.93% 0.02 97.47deg);
	--color-surface-100: oklch(87.18% 0.02 96.09deg);
	--color-surface-200: oklch(75.33% 0.02 94.21deg);
	--color-surface-300: oklch(62.66% 0.01 91.55deg);
	--color-surface-400: oklch(49.67% 0.01 87.5deg);
	--color-surface-500: oklch(35.36% 0.01 80.66deg);
	--color-surface-600: oklch(32.67% 0.01 75.27deg);
	--color-surface-700: oklch(30.22% 0.01 78.22deg);
	--color-surface-800: oklch(27.31% 0 84.55deg);
	--color-surface-900: oklch(24.74% 0 106.37deg);
	--color-surface-950: oklch(21.78% 0 none);
	--color-surface-contrast-dark: var(--color-surface-950);
	--color-surface-contrast-light: var(--color-surface-50);
	--color-surface-contrast-50: var(--color-surface-contrast-dark);
	--color-surface-contrast-100: var(--color-surface-contrast-dark);
	--color-surface-contrast-200: var(--color-surface-contrast-dark);
	--color-surface-contrast-300: var(--color-surface-contrast-dark);
	--color-surface-contrast-400: var(--color-surface-contrast-light);
	--color-surface-contrast-500: var(--color-surface-contrast-light);
	--color-surface-contrast-600: var(--color-surface-contrast-light);
	--color-surface-contrast-700: var(--color-surface-contrast-light);
	--color-surface-contrast-800: var(--color-surface-contrast-light);
	--color-surface-contrast-900: var(--color-surface-contrast-light);
	--color-surface-contrast-950: var(--color-surface-contrast-light);
}

